// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the IFrame with props matches the snapshot 1`] = `
<iframe
  className="test-class-name"
  title="IFrame title"
/>
`;

exports[`the IFrame without props matches the snapshot 1`] = `
<iframe
  title="IFrame title"
/>
`;
